# thedraftclinic

./: .replit  ADMIN_GUIDE.md  AWS_DEPLOYMENT.md  README.md  design_guidelines.md  main.py  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Replit-Ready-Prompt-Paste-into-Update-Replit-Agent-Goal_1765807792417.txt  Pasted-Replit-Ready-Prompt-Paste-into-Update-Replit-Agent-Goal_1765811068813.txt
backend/: Dockerfile  requirements.txt  run.py
backend/app/: __init__.py
backend/app/models/: __init__.py
backend/app/routes/: admin.py  auth.py  jobs.py  quotes.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: CurrencySelector.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  QuoteSummary.tsx  ServiceCard.tsx  StatusBadge.tsx  StepIndicator.tsx  ThemeToggle.tsx  TurnaroundSelector.tsx
client/src/lib/: utils.ts
client/src/pages/: Admin.tsx  Dashboard.tsx  Home.tsx  Landing.tsx  Login.tsx  Quote.tsx
server/: replitAuth.ts  routes.ts  storage.ts
shared/: schema.ts
