[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-session>=0.8.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "werkzeug>=3.1.4",
]
